# GoogleWiFiDesktop

./: .gitignore  .gitmodules  CMakeLists.txt  GoogleWiFiClient.pro  OnHubDesktopClient.pro  README.md  apiauthenticator.cpp  apiauthenticator.h  devicesdialog.cpp  devicesdialog.h  devicesdialog.ui  easyhttp.cpp  easyhttp.h  main.cpp  mainwidget.cpp  mainwidget.h  mainwidget.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  systemselectiondialog.cpp  systemselectiondialog.h  systemselectiondialog.ui  wifiapi.cpp  wifiapi.h
.github/workflows/: main.yml
Encryption/: qaesencryption.cpp  qaesencryption.h
GAPIS/: credentials.h
GAPIS/Auth/: RandomUtilities.h  consentdialog.cpp  consentdialog.h  consentdialog.ui
GAPIS/OAuth2/: RandomUtilities.h
GAPIS/jsontypes/: SystemDevices.h  WifiSystem.h
GAPIS/wifi/: FoyerClient.h  SessionAuthorize.h  SessionContext.cpp  SessionContext.h
OAuthClient/: AuthenticationUtilities.cpp  AuthenticationUtilities.h  authdialog.cpp  authdialog.h  authdialog.ui
TemporaryAuthSolution/: getToken.html
src/app/: main.cpp  mainwindow.cpp  mainwindow.ui  users.cpp  users.h  util.cpp  util.h
src/core/: authorization.cpp  authorization.h  gwapi.h
src/ui/: authorization.cpp  authorization.h  mainwindow.cpp  mainwindow.h
